Продолжаю переводить Оглавление

--- a/Оглавление.md
+++ b/Оглавление.md
@@ -1,7 +1,7 @@
 Это русский перевод Wiki сетевого блокировщика [uBlock Origin](https://github.com/gorhill/uBlock/) созданного [Raymond Hill](https://github.com/gorhill).
 - [Оригинал на английском языке](https://github.com/gorhill/uBlock/wiki) 
 - [Китайский перевод этой Wiki: 中文](https://github.com/fang5566/uBlock/wiki/Home)
-- [Лог изменений (на английском языке)](https://github.com/gorhill/uBlock/releases) / [Версии: 0.9.3.0 - 0.2.0.0](https://github.com/chrisaljoudi/uBlock/releases) / [Версии ранее 0.1.4.8](https://github.com/gorhill/uBlock/wiki/Change-log)
+- [Лог изменений (на английском языке)](https://github.com/gorhill/uBlock/releases) / [Версии от 0.9.3.0 до 0.2.0.0](https://github.com/chrisaljoudi/uBlock/releases) / [Версии ранее 0.1.4.8](https://github.com/gorhill/uBlock/wiki/Change-log)
 - [О необходимых разрешениях в Chromium](https://github.com/gorhill/uBlock/wiki/About-the-required-permissions) **(не переведено)**
     - [Можно ли доверять uBlock?](https://github.com/gorhill/uBlock/wiki/Can-you-trust-uBlock%3F) **(не переведено)**
 - [Политика конфиденциальности](https://github.com/gorhill/uBlock/wiki/Privacy-policy) **(не переведено)**
@@ -10,45 +10,45 @@
     - [Всплывающий пользовательский интерфейс](https://github.com/gorhill/uBlock/wiki/Quick-guide:-popup-user-interface) **(не переведено)**
         - [Переключатели для каждого сайта](https://github.com/gorhill/uBlock/wiki/Per-site-switches) **(не переведено)**
     - [Панель управления](https://github.com/gorhill/uBlock/wiki/Dashboard) **(не переведено)**
-        - Панель [_Настройки_](https://github.com/gorhill/uBlock/wiki/Dashboard:-Settings) **(не переведено)**
-        - Панель [_Сторонние фильтры_](https://github.com/gorhill/uBlock/wiki/Dashboard:-3rd-party-filters) **(не переведено)**
+        - Вкладка [_Настройки_](https://github.com/gorhill/uBlock/wiki/Dashboard:-Settings) **(не переведено)**
+        - Вкладка [_Сторонние фильтры_](https://github.com/gorhill/uBlock/wiki/Dashboard:-3rd-party-filters) **(не переведено)**
             - [Списки Фильтров со всего Интернета](https://github.com/gorhill/uBlock/wiki/Filter-lists-from-around-the-web) **(не переведено)**
-        - Панель _Мои фильтры_ (TODO) **(не переведено)**
+        - Вкладка _Мои фильтры_ (TODO) **(не переведено)**
             - [Синтаксис статических фильтров](https://github.com/gorhill/uBlock/wiki/Static-filter-syntax) **(не переведено)**
-        - Панель _Мои правила_ pane (TODO) **(не переведено)**
+        - Вкладка _Мои правила_ (TODO) **(не переведено)**
             - [Синтаксис правил динамических фильтров](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-rule-syntax) **(не переведено)**
-        - Панель [_Белый список_](https://github.com/gorhill/uBlock/wiki/Dashboard:-Whitelist) **(не переведено)**
+        - Вкладка [_Белый список_](https://github.com/gorhill/uBlock/wiki/Dashboard:-Whitelist) **(не переведено)**
             - [How to whitelist a web site](https://github.com/gorhill/uBlock/wiki/How-to-whitelist-a-web-site) **(не переведено)**
         - [Settings: importing from/exporting to cloud storage](https://github.com/gorhill/uBlock/wiki/Cloud-storage)  **(не переведено)**
     - [Blocking mode](https://github.com/gorhill/uBlock/wiki/Blocking-mode) **(не переведено)**
         - [Very easy mode](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-very-easy-mode) **(не переведено)**
         - [Easy mode](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-easy-mode) (по умолчанию) **(не переведено)**
-            - [Easy mode + enhanced security/privacy **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-Benefits-of-blocking-3rd-party-iframe-tags)
-            - [Easy mode + more privacy **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-to-easily-reduce-privacy-exposure)
-        - [Medium mode **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-medium-mode) (optimal for advanced users)
-        - [Hard mode **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-hard-mode)
-        - [Nightmare mode **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-nightmare-mode)
-    - [Element picker **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Element-picker)
-    - [Strict blocking **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Strict-blocking)
-        - [Badware risks **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Badware-risks)
-    - [The logger **(не переведено)**](https://github.com/gorhill/uBlock/wiki/The-logger)
-    - [Dynamic filtering **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering)
-        - [Quick guide **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-quick-guide)
-        - [Default-deny **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-default-deny)
-        - [Turn off uBlock everywhere **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-turn-off-uBlock-everywhere)
-        - [Turn off uBlock everywhere _except_... (blacklist mode) **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-turn-off-uBlock-everywhere-except)
-    - [URL filtering **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Dynamic-URL-filtering)
-    - [DOM inspector **(не переведено)**](https://github.com/gorhill/uBlock/wiki/DOM-inspector)
-    - [Overview of uBlock's network filtering engine **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Overview-of-uBlock's-network-filtering-engine)
-        - [Overview of uBlock's network filtering engine: details **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Overview-of-uBlock's-network-filtering-engine:-details)
-        - [Does uBlock block ads or just hide them? **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Does-uBlock-block-ads-or-just-hide-them%3F)
-        - [Doesn't uBlock Origin add overhead to page load? **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Doesn't-uBlock-Origin-add-overhead-to-page-load%3F)
-- [Tools **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Tools)
-- [Deploying uBlock Origin **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Deploying-uBlock-Origin)
-- [Troubleshooting ](https://github.com/gorhill/uBlock/wiki/Troubleshooting) **(не переведено)**
-    - [Software known to have uninstalled uBlock Origin **(не переведено)**](https://github.com/gorhill/uBlock/wiki/Software-known-to-have-uninstalled-uBlock-Origin)
-- [Часто задаваемые вопросы (ЧаВо) **(не переведено)**](https://github.com/gorhill/uBlock/wiki/FAQ)
-- Установите через [Mozilla Add-ons for Firefox] (https://addons.mozilla.org/firefox/addon/ublock-origin/), [Chrome store](https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm), [Opera store](https://addons.opera.com/en-gb/extensions/details/ublock/), или [вручную](https://github.com/gorhill/uBlock/tree/master/dist#install).
+            - [Easy mode + enhanced security/privacy](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-Benefits-of-blocking-3rd-party-iframe-tags) **(не переведено)**
+            - [Easy mode + more privacy](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-to-easily-reduce-privacy-exposure) **(не переведено)**
+        - [Medium mode](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-medium-mode) (optimal for advanced users) **(не переведено)**
+        - [Hard mode](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-hard-mode) **(не переведено)**
+        - [Nightmare mode](https://github.com/gorhill/uBlock/wiki/Blocking-mode:-nightmare-mode) **(не переведено)**
+    - [Element picker](https://github.com/gorhill/uBlock/wiki/Element-picker) **(не переведено)**
+    - [Strict blocking](https://github.com/gorhill/uBlock/wiki/Strict-blocking) **(не переведено)**
+        - [Badware risks](https://github.com/gorhill/uBlock/wiki/Badware-risks) **(не переведено)**
+    - [The logger](https://github.com/gorhill/uBlock/wiki/The-logger) **(не переведено)**
+    - [Dynamic filtering](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering) **(не переведено)**
+        - [Quick guide](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-quick-guide) **(не переведено)**
+        - [Default-deny](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-default-deny) **(не переведено)**
+        - [Turn off uBlock everywhere](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-turn-off-uBlock-everywhere) **(не переведено)**
+        - [Turn off uBlock everywhere _except_... (blacklist mode)](https://github.com/gorhill/uBlock/wiki/Dynamic-filtering:-turn-off-uBlock-everywhere-except) **(не переведено)**
+    - [URL filtering](https://github.com/gorhill/uBlock/wiki/Dynamic-URL-filtering) **(не переведено)**
+    - [DOM inspector](https://github.com/gorhill/uBlock/wiki/DOM-inspector) **(не переведено)**
+    - [Overview of uBlock's network filtering engine](https://github.com/gorhill/uBlock/wiki/Overview-of-uBlock's-network-filtering-engine) **(не переведено)**
+        - [Overview of uBlock's network filtering engine: details](https://github.com/gorhill/uBlock/wiki/Overview-of-uBlock's-network-filtering-engine:-details) **(не переведено)**
+        - [Does uBlock block ads or just hide them?](https://github.com/gorhill/uBlock/wiki/Does-uBlock-block-ads-or-just-hide-them%3F) **(не переведено)**
+        - [Doesn't uBlock Origin add overhead to page load?](https://github.com/gorhill/uBlock/wiki/Doesn't-uBlock-Origin-add-overhead-to-page-load%3F) **(не переведено)**
+- [Tools](https://github.com/gorhill/uBlock/wiki/Tools) **(не переведено)**
+- [Deploying uBlock Origin](https://github.com/gorhill/uBlock/wiki/Deploying-uBlock-Origin) **(не переведено)**
+- [Исправление проблем](https://github.com/gorhill/uBlock/wiki/Troubleshooting) **(не переведено)**
+    - [Известные программы удаляющие uBlock Origin](https://github.com/gorhill/uBlock/wiki/Software-known-to-have-uninstalled-uBlock-Origin) **(не переведено)**
+- [Часто задаваемые вопросы (ЧаВо)](https://github.com/gorhill/uBlock/wiki/FAQ)  **(не переведено)**
+- Установите через [Дополнения Mozilla Firefox](https://addons.mozilla.org/firefox/addon/ublock-origin/), [Интернет-магазин Chrome](https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm), [Дополнения к Opera](https://addons.opera.com/en-gb/extensions/details/ublock/), или [вручную](https://github.com/gorhill/uBlock/tree/master/dist#install).
     - [Ответы автора на избранные отзывы в магазинах приложений](https://github.com/gorhill/uBlock/wiki/My-answers-to-web-store-reviews-where-appropriate) **(не переведены)**
 - [О конфиденциальности](https://github.com/gorhill/uBlock/wiki/Privacy-stuff) **(не переведено)**
 - [Tricks and tips waterfall](https://github.com/gorhill/uBlock/wiki/Tips-and-tricks-waterfall) **(не переведено)**
